# european-researchers-night-software

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build_docker_image.yml  python_linters.yml
ern/: manage.py
ern/ern/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
ern/locale/nl/LC_MESSAGES/: django.mo  django.po
ern/webapp/: __init__.py  admin.py  apps.py  forms.py  llms.py  models.py  tests.py  urls.py  views.py  widgets.py
ern/webapp/migrations/: 0001_initial.py  0001_squashed_0007_sample_human_shuffled_story_difficulty_and_more.py  0001_squashed_0010_rename_rating_reconstructed_human_accuracy_sample_rating_reconstructed_human_niceness_and_more.py  0002_sample_language.py  0003_rename_rating_reconstructed_accuracy_sample_rating_reconstructed_human_accuracy_and_more.py  0004_alter_sample_age_alter_sample_language_and_more.py  0005_alter_sample_age.py  0006_alter_sample_age.py  0007_sample_human_shuffled_story_difficulty_and_more.py  0008_alter_sample_age.py  0009_alter_sample_human_shuffled_story_and_more.py  0010_rename_rating_reconstructed_human_accuracy_sample_rating_reconstructed_human_niceness_and_more.py  __init__.py
ern/webapp/templates/: 00_language.html  01_consent.html  01_start_experiment.html  01a_enter_demographics.html  01a_why.html  01b_what.html  01c_how.html  01d_other.html  01e_consent.html  02_enter_story.html  02a_enter_demographics.html  03_shuffle_story.html  04_rate_human_shuffle_reconstructed.html  04a_next_reconstruction.html  05_rate_random_shuffle_reconstructed.html  06_thank_you.html  base.html  bootstrap_form.html  bootstrap_form_checkbox.html  dragdrop.html
ern/webapp/templates/widgets/: bootstrap_checkbox.html  bootstrap_integer.html  bootstrap_textarea.html
