[tool.poetry]
name = "european-researchers-night-software"
version = "0.1.0"
description = ""
authors = ["Patrick Darwinkel <patrick@darwinkel.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
ruff = "^0.5.1"
mypy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Code quality tooling configuration
[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001", "T201"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true