[tool.poetry]
name = "european-researchers-night-software"
version = "0.1.0"
description = ""
authors = ["Patrick Darwinkel <patrick@darwinkel.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
nltk = "^3.9"
openai = "^1.50"
django-environ = "^0.11.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7"
mypy = "^1.10"
poetry-plugin-export = "^1.8"
django-stubs = {extras = ["compatible-mypy"], version = "^5.1"}
setuptools = "^75.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Code quality tooling configuration
[tool.ruff]
line-length = 120
target-version = "py312"
fix = true
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["D203", "D212", "COM812", "ISC001", "T201"]

[tool.mypy]
mypy_path = "ern"
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "ern.settings"